Navigation layout complete

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <header>
 
-        <nav>
+        <nav aria-label="Main Navegation Section">
 
             <a href="#">
-                <img src="./image/Dragon.png" alt="Dragon logo">
+                <img src="./image/Law-draw.png" alt="Dragon logo">
             </a>
             <span class="spacer"></span>
             <ul>
@@ -33,7 +33,7 @@
 
     </main>
 
-    <nav>
+    <nav aria-label="Footer Navigation Section">
 
         <div class="navegationbox">
 
