--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,15 +9,15 @@
 <body>
     <header>
 
-        <nav>
+        <nav aria-label="Main Navegation Section">
 
             <a href="../index.html">
-                <img src="../image/Dragon.png" alt="Dragon logo">
+                <img src="../image/Law-draw.png" alt="Dragon logo">
             </a>
             <span class="spacer"></span>
             <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="./about.html">About</a></li>
                 <li><a href="./services.html"  >Services</a></li>
                 <li><a href="#" class="current">Contact</a></li>
             </ul>
@@ -31,7 +31,7 @@
         <h1 style="text-align: center;">Contact Page</h1>
 
     </main>
-    <nav>
+    <nav aria-label="Footer Navegation Section">
 
         <div class="navegationbox">
 
