--- a/pages/about.html
+++ b/pages/about.html
@@ -9,10 +9,10 @@
 <body>
     <header>
 
-        <nav>
+        <nav aria-label="Main Navegation Section">
 
             <a href="../index.html">
-                <img src="../image/Dragon.png" alt="Dragon logo">
+                <img src="../image/Law-draw.png" alt="Dragon logo">
             </a>
             <span class="spacer"></span>
             <ul>
@@ -31,7 +31,7 @@
         <h1 style="text-align: center;">About Page</h1>
 
     </main>
-    <nav>
+    <nav aria-label="Footer Navigation Section">
 
         <div class="navegationbox">
 
